new 5s-crate shortname

--- a/0.4-DRAFT/ro-crate-preview.html
+++ b/0.4-DRAFT/ro-crate-preview.html
@@ -169,7 +169,7 @@
       "@id": "https://trefx.uk/5s-crate/0.4-DRAFT/example-request.bagit.zip",
       "@type": "DataDownload",
       "name": "example-request.bagit.zip",
-      "description": "Example Request following the trusted-wfrun-crate profile, archived as BagIt ZIP",
+      "description": "Example Request following the 5s-crate profile, archived as BagIt ZIP",
       "encodingFormat": "application/zip",
       "conformsTo": {
         "@id": "https://w3id.org/ro/crate"
@@ -198,7 +198,7 @@
       "@id": "https://trefx.uk/5s-crate/0.4-DRAFT/example-result.bagit.zip",
       "@type": "DataDownload",
       "name": "example-result.bagit.zip",
-      "description": "Example Result following the trusted-wfrun-crate profile, archived as BagIt ZIP",
+      "description": "Example Result following the 5s-crate profile, archived as BagIt ZIP",
       "encodingFormat": "application/zip",
       "conformsTo": {
         "@id": "https://w3id.org/ro/crate"
@@ -784,7 +784,7 @@ table.table {
             <td style='text-align:left'><span>DataDownload</span></td>
             </tr><tr>
             <th style="text-align:left;" class="prop">description<span>&nbsp;</span><a href="http://schema.org/description">[?]</a></th>
-            <td style='text-align:left'><span>Example Request following the trusted-wfrun-crate profile, archived as BagIt ZIP</span></td>
+            <td style='text-align:left'><span>Example Request following the 5s-crate profile, archived as BagIt ZIP</span></td>
             </tr><tr>
             <th style="text-align:left;" class="prop">encodingFormat<span>&nbsp;</span><a href="http://schema.org/encodingFormat">[?]</a></th>
             <td style='text-align:left'><span>application/zip</span></td>
@@ -866,7 +866,7 @@ table.table {
             <td style='text-align:left'><span>DataDownload</span></td>
             </tr><tr>
             <th style="text-align:left;" class="prop">description<span>&nbsp;</span><a href="http://schema.org/description">[?]</a></th>
-            <td style='text-align:left'><span>Example Result following the trusted-wfrun-crate profile, archived as BagIt ZIP</span></td>
+            <td style='text-align:left'><span>Example Result following the 5s-crate profile, archived as BagIt ZIP</span></td>
             </tr><tr>
             <th style="text-align:left;" class="prop">encodingFormat<span>&nbsp;</span><a href="http://schema.org/encodingFormat">[?]</a></th>
             <td style='text-align:left'><span>application/zip</span></td>
